# rust-SPPM

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  floydrivest.rs  hit.rs  lights.rs  main.rs  materials.rs  matrix.rs  mesh.rs  object3d.rs  photon.rs  ray.rs  scene_parser.rs  sceneparser.rs  utils.rs
testcases/: first.json  second.json
