[package]
name = "rust-ppm"
version = "0.1.0"
authors = ["ChrisZhang <zcyjim@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "3.0.1"
json = "0.12.4"
vecmat = "0.7.7"
rand = "0.8.4"
lazy_static = "1.4.0"
image = "0.23.14"
num-complex = "0.4.0"
adqselect = "0.1.3"